--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,16 @@ services:
       - keyword-api
     restart: unless-stopped
 
+  react-frontend:
+    build: ./frontend-react
+    ports:
+      - "9082:80"
+    volumes:
+      - ./frontend-react/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - keyword-api
+    restart: unless-stopped
+
   micropython-dev:
     build: ./micropython
     container_name: micropython-dev
